@@ -468,6 +468,21 @@ namespace MonoDevelop.Core
 				return new FilePath (Path.GetFullPath (fileName));
 			}
 		}
+		
+		/// <summary>
+		/// Returns a path in standard form, which can be used to be compared
+		/// for equality with other canonical paths. It is similar to FullPath,
+		/// but unlike FullPath, the directory "/a/b" is considered equal to "/a/b/"
+		/// </summary>
+		public FilePath CanonicalPath {
+			get {
+				string fp = Path.GetFullPath (fileName);
+				if (fp.Length > 0 && fp[fp.Length - 1] == Path.DirectorySeparatorChar)
+					return fp.TrimEnd (Path.DirectorySeparatorChar);
+				else
+					return fp;
+			}
+		}
 
 		public string FileName {
 			get {
