@@ -1,3 +1,11 @@
+2010-04-23  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects/ProjectFileCollection.cs: Properly
+	  check for child files.
+
+	* MonoDevelop.Core/FileService.cs: Added CanonicalPath
+	  property.
+
 2010-04-21  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Core.Execution/ProcessService.cs: Fix build.
